<resources>
    <string name="app_name">Coding Chain Android</string>
    <string name="background_elipses">background elipses</string>
    <string name="app_title">Coding Chain</string>
    <string name="app_subtitle">Coding Compete</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="back_arrow_button">Back arrow button</string>
    <string name="login_title">Login</string>
    <string name="account_title">Account</string>
    <string name="account_rights">Rights: %1$s</string>
    <string name="none">None</string>
    <string name="login_title_description">Enter your email address and<br>\n password to access your account</br></string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password here</string>
    <string name="login_error">An error occurred during login</string>
    <string name="fill_fields">Please fill all the inputs</string>
    <string name="different_passwords">Passwords do not match</string>
    <string name="wrong_email">Please fill a correct email</string>
    <string name="register_error">An error occurred during register</string>
    <string name="register_title">Sign Up</string>
    <string name="register_title_description">Please fill information to create an<br>\n account and sign up to continue</br></string>
    <string name="firstname_hint">Enter your username here</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="turnaments_title">Home</string>
    <string name="promotionnal_banner_description">Promotionnal banner for turnaments</string>
    <string name="month_filter_title">Month</string>
    <string name="week_filter_title">Week</string>
    <string name="today_filter_title">Today</string>
    <string name="turnament_card_description">Turnament card</string>
    <string name="turnament_placeholder_image_description">Turnament placeholder image</string>
    <string name="turnament_view_title">Turnament details</string>
    <string name="turnament_image_description">Turnament Image</string>
    <string name="turnament_level_image_description">Turnament Level Image</string>
    <string name="tournaments">My tournaments</string>
    <string name="teams">My teams</string>
    <string name="logout">Logout</string>
    <string name="account">My account</string>
    <string name="win_10">WIN $10!</string>
    <string name="today_s_highest_token_balance_wins">Today’s highest token balance wins!</string>
    <string name="an_error_occured_during_register">An error occurred during register</string>
    <string name="an_error_occured_during_modify">An error occurred during modification</string>
    <string name="teams_title">My Teams</string>
    <string name="no_result_team">You are in no team yet</string>
    <string name="team_members_count"> Members: %1$d</string>
    <string name="modify">Modify</string>
    <string name="new_password_hint">Enter your new password here</string>
    <string name="modify_success">Account modification successful</string>
    <string name="new_confirm_password_hint">Confirm new password</string>
    <string name="no_teams_yet">No teams yet</string>
</resources>