<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/team_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:elevation="4dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/purple_500"
        android:contentDescription="@string/back_arrow_button"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams_title"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:elevation="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />
    <ImageView
        android:id="@+id/elipses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/elipses"
        android:contentDescription="@string/background_elipses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:gravity="start"
        android:layout_width="fill_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical" >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="10dp"
            android:backgroundTint="@color/light_gray"
            >
            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:elevation="10dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/no_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_team"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/data"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/team_list"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>